2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* src/org.gnome.Empathy.Chat.service.in:
	* src/empathy-accounts.c:
	* src/empathy-accounts-main.c:
	* src/empathy-chat-main.c:
	* src/empathy.c:
	* src/Makefile.am:
	* src/empathy-main.c:
	* libempathy/gossip-chatroom-manager.c:
	* autogen.sh: Empathy is no more splitted into 2 processes. It makes
	debugging more difficult when emmpathy-chat crashes. It's also more
	optimised like that since contact objects can be shared.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat-window.c: Disconnect signals from
	chatroom_manager. Fixes bug #447178.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in:
	* po/POTFILES.skip: Get strings in empathy.desktop.in.in and skip
	empathy.desktop.in. Fixes bug #446161.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in: Adding missing files.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-log-window.c:
	* libempathy-gtk/gossip-chat-window.c:
	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-log-manager.h: Do not create log directory for a
	chat if there is no messages to put in. Show logs and information for
	the contact we are speaking with in the chat window menu.

2007-06-13 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/Makefile.am:
	* libempathy-gtk/gossip-log-window.glade:
	* libempathy-gtk/gossip-log-window.h:
	* libempathy-gtk/gossip-log-window.c:
	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-log-manager.h:
	* libempathy-gtk/gossip-chat.c:
	* libempathy-gtk/empathy-main-window.c: New window for viewing logs.

	* libempathy-gtk/gossip-chat-view.c: Do not use smooth scroll when
	resizing the view.

	* libempathy-gtk/gossip-contact-list-store.c: Do not set active
	contacts when creating the store, and when contact groups changed.

	* src/empathy-main.c: Fix warning when using command-line options.
